tests/machine/x/fs/slice.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/slice.fs(3,50): error FS0001: This expression was expected to have type
    'a list    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/slice.fs(4,50): error FS0001: This expression was expected to have type
    'a list    
but here has type
    int    
